# python-ai-console

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
tests/: test_main.py
